move web user preferences into it's own class structure; add group definition total to the summary counts portlet;